--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,7 +65,7 @@ application.langs="en,fr"
 #db.default.password=srobins
 
 db.default.driver="org.h2.Driver"
-db.default.url="jdbc:h2:./db/unittest"
+db.default.url="jdbc:h2:./db/master"
 db.default.user="sa"
 db.default.password=""
 
